Download Section End

--- a/index.html
+++ b/index.html
@@ -109,6 +109,38 @@
         </div>
 
 
+        <!-- Download Section -->
+
+
+        <div class="container">
+
+            <div class="links">
+                
+                <a href="https://redirect.appmetrica.yandex.com/serve/1109100489301122257">
+                    <img src="./Statics/Images/app_store.svg" alt="" width="160px">
+                </a>
+
+                <a href="https://redirect.appmetrica.yandex.com/serve/1181173947656399155">
+                    <img src="./Statics/Images/myketmarket.png" alt="" width="160px">
+                </a>
+                
+                <a href="https://redirect.appmetrica.yandex.com/serve/100056237185439217">
+                    <img src="./Statics/Images/direct-download-badge.png" alt="" width="160px">
+                </a>
+
+                <a href="https://redirect.appmetrica.yandex.com/serve/243413381082522868?campaign=CafeBazaar">
+                    <img src="./Statics/Images/bazaar.png" alt="" width="160px">
+                </a>
+
+                <a href="https://app.snapp.taxi/pre-ride?utm_source=website&utm_medium=webapp-button&_gl=1*136eiho*_gcl_au*NjMzNjgyMjIyLjE3Mjc3MjAyODg.">
+                    <img src="./Statics/Images/snapp-pwa.png" alt="" width="160px">
+                </a>
+
+            </div>
+
+        </div>
+
+
     </body>
 
 
