Needs Responses Finished

--- a/index.html
+++ b/index.html
@@ -592,6 +592,72 @@
         </div>
 
 
+
+        <!-- needs responses section -->
+
+
+
+        <div class="responses">
+
+            <div class="responses-pic">
+
+            </div>
+
+            <div class="responses-intro">
+                <h3>
+                    سوپر اپ اسنپ؛ پاسخی به تمام نیاز ها
+                </h3>
+
+                <p>
+                    اسنپ اولین تاکسی اینترنتی ایران بعد از پنج سال فعالیت در حوزه ی تردد شهری به یک سوپر اپ با خدمات متنوع تبدیل شد سوپراپ اسنپ راخ حلی جدید و ساده است که با استفاده از آن تنها با یک اپلیکیشن می توانید علاوه بر درخواست خودرو موتور و وانت از خدمات متعددی از جمله سفارش\ غذا پزشک و مشاور آنلاین خرید از سوپرمارکت ها و فروشگاه ها اسباب کشی خرید بلیط (هواپیما و اتوبوس و قطار) رزرو هتل پرداخت قبض و خرید شارژ استفاده کنید.
+                </p>
+            </div>
+
+
+            <div class="needs-subpics">
+                <div class="needs-subpics-complete">
+                    <div class="needs-subpics-pic">
+                        <img src="./Statics/Images/eco.png" height="190px" alt="eco pic">
+                    </div>
+                    <div class="needs-subpics-h3">
+                        به صرفه
+                    </div>
+                    <div class="needs-subpics-p">
+                        سوپراپ اسنپ علاوه بر زمان در هزینه های شما نیز صرفه جویی می کند تا بهترین خدمات را با قیمتی منطقی دریافت کنید
+                    </div>
+                </div>
+
+                <div class="needs-subpics-complete">
+                    <div class="needs-subpics-pic">
+                        <img src="./Statics/Images/fast.png" height="190px" alt="fast pic">
+                    </div>
+                    <div class="needs-subpics-h3">
+                        سریع
+                    </div>
+                    <div class="needs-subpics-p">
+                         قرار گرفتن خدمات در یک پلت فرم به صرفه جویی در زمان کمک می کند. سوپراپ اسنپ پاسخی سریع به نیاز های روزمره شماست.
+                    </div>
+                </div>
+
+                <div class="needs-subpics-complete">
+                    <div class="needs-subpics-pic">
+                        <img src="./Statics/Images/easy.png" height="190px" alt="easy pic">
+                    </div>
+                    <div class="needs-subpics-h3">
+                        آسان
+                    </div>
+                    <div class="needs-subpics-p">
+                        برای استفاده از هر کدام از خدمات سوپراپ اسنپ کافی است وارد اپلیکیشن اسنپ شوید و روی آیکون مورد نظر بزنید.
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        
+
+
     </body>
 
 
